--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
 	"compilerOptions": {
 		"target": "es6",
-		"module": "commonjs"
+		"module": "commonjs",
+		"allowSyntheticDefaultImports": false
 	},
 	"include": ["src"],
 	"exclude": ["node_modules"]
